Bug 1123054: Don't check VDA reference count. r=rillian a=sledru