dom/media/fmp4/apple/AppleVDADecoder.cpp
@@ -356,10 +356,6 @@ AppleVDADecoder::SubmitFrame(mp4_demuxer::MP4Sample* aSample)
                                  block,
                                  frameInfo);
 
-  LOG("[%s]: FrameInfo retain count = %ld",
-      __func__, CFGetRetainCount(frameInfo));
-  MOZ_ASSERT(CFGetRetainCount(frameInfo) >= 2, "Bad retain count");
-
   if (rv != noErr) {
     NS_WARNING("AppleVDADecoder: Couldn't pass frame to decoder");
     return NS_ERROR_FAILURE;
